[package]
name = "riscv-rt"
version = "0.11.0"
rust-version = "1.59"
repository = "https://github.com/rust-embedded/riscv-rt"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for RISC-V CPU's"
keywords = ["riscv", "runtime", "startup"]
license = "ISC"
edition = "2018"

[features]
default = ["convenience-macros"]
s-mode = []
single-hart = []
convenience-macros = ["dep:riscv-rt-macros"]

[dependencies]
riscv = "0.10"
riscv-rt-macros = { path = "macros", version = "0.2.0", optional = true }

[dev-dependencies]
panic-halt = "0.2.0"

[build-dependencies]
riscv-target = "0.1.2"
